[package]
name = "rs-lua-01"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lua-01-basic"
path = "src/lua-01-basic.rs"

[[bin]]
name = "lua-02-syntax"
path = "src/lua-02-syntax.rs"

[[bin]]
name = "lua-03-require"
path = "src/lua-03-require.rs"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored"] }
